src/App.css
@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@400&display=swap");

*,
*:after,
*:before {
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

:root {
  --primary-color: #43bfc7;
  --secondary-color: #13264d;
  --background-color: #fafbfe;
  --text-color: #637381;
  --white-color: #fff;
  --black-color: #000;
  --primary-font: "Rubik", sans-serif;
}

html {
  scroll-behavior: smooth;
  height: 100vh;
}

body {
  font-family: var(--primary-font) !important;
  font-size: 100% !important;
  font-weight: 400 !important;
  background-color: var(--background-color) !important;
}

.section-card {
  background-color: #ffffff;
  box-shadow: 0px 0px 15px 0px #0000000a;
  border-radius: 5px;
  padding: 20px;
}

.main-content {
  min-height: 100vh;
  margin-top: 30px;
}

.section-title {
  font-size: 20px;
  font-weight: 700;
}

/* For Webkit (Chrome, Safari, etc.) */
::-webkit-scrollbar {
  width: 8px;
}

::-webkit-scrollbar-thumb {
  background-color: hsl(184, 54%, 52%, 0.6);
  border-radius: 20px;
  transition: background-color 0.3s ease;
}

::-webkit-scrollbar-thumb:hover {
  background-color: hsl(184, 54%, 52%, 1);
}

::-webkit-scrollbar-track {
  background-color: white;
}

